--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>Proapp</title>
   </head>
   <body>
     <div id="root"></div>
